changes' is much more useful than 'misc edits' or 'code cleanup'.
3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------

Fix for bug #2088893: Assertion in cfanim.c globalEventListener on client connect.
Renamed all globalEventListener to put a plugin-specific prefix.
 plugins/cfanim/include/cfanim_proto.h
 plugins/cfanim/cfanim.c
 plugins/cflogger/include/cflogger_proto.h
 plugins/cflogger/cflogger.c
 plugins/cfnewspaper/include/cfnewspaper_proto.h
 plugins/cfnewspaper/cfnewspaper.c
 plugins/cfpython/include/cfpython_proto.h
 plugins/cfpython/cfpython.c
 plugins/cfrhg/include/cfrhg_proto.h
 plugins/cfrhg/cfrhg.c
 plugins/citylife/include/citylife_proto.h
 plugins/citylife/citylife.c
Nicolas Weeger 2008-09-19

Add new setup option "num_look_objects": allows clients to set the size
of the ground view. Clients not sending this option default to 50 which
is the previously hard-coded size. Fixes some off-by-one issues; now
always exactly the requested number of objects are sent.
 trunk/include/newserver.h
 trunk/socket/item.c
 trunk/socket/init.c
 trunk/socket/request.c
 trunk/doc/Developers/protocol
Andreas Kirschbaum 2008-09-06

Automatic strip of trailing whitespaces. This stripped a trailing whitespace in
ChangeLog, that is why ChangeLog is listed too.
 ChangeLog
 make_win32/plugin_python/plugin_python.rc
 make_win32/plugin_anim/plugin_anim.dsp
 make_win32/crossfire.rc
 make_win32/plugin_common/plugin_common.dsp
 make_win32/INSTALL_WIN32.txt
 make_win32/Release_notes.txt
Arvid Norlander 2008-09-02

Small code fixes found using GCC compiler warnings (bad format strings,
unreachable return, missing return, unclear {} in a #define when used in a if.)
 include/global.h
 socket/item.c